# linguadoc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: testpypi.yml
docs/: genindex.html  index.html  linguadoc.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  linguadoc.rst.txt  modules.rst.txt
linguadoc/: __init__.py  _entry.py  en_template.docx  gen_doc.py  lib.py
linguadoc/de/: de_template.docx
linguadoc/en/: en_template.docx
linguadoc/es/: es_template.docx
tests/: test_linguadoc.py  test_pydocx.py
